--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,10 @@
                 ><i class="fa-solid fa-magnifying-glass"></i
               ></a>
             </div>
+            <a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="nav-link"><i class="fab fa-dribbble"></i></a>
           </ul>
         </div>
       </nav>
