added text colors and modifiers

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- custom style.css file -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -27,7 +30,7 @@
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">Blog</a>
             <a href="#" class="nav-link">Pages</a>
-            <a href="#" class="nav-link">Catergories</a>
+            <a href="#" class="nav-link">Categories</a>
             <a href="#" class="nav-link">About</a>
             <a href="#" class="nav-link">Contact</a>
           </ul>
